# pytemp

./: .gitignore  README.md  pyproject.toml
setup/: constants.py  prompt.py  script.py  tests.py  update_pyproject.py
