[project]
name = "pytemp"
version = "0.1.0"
description = ""
authors = [
    { name = "ryouhama" }
]
dependencies = [
    "pytest>=8.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
setup = "python setup/script.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytemp"]
